[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "two_number_adder_my_commits"
version = "1.1"
authors = [
  { name="my-commits", email="elornau@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/my-commits/add_two_numbers"
"Bug Tracker" = "https://github.com/my-commits/add_two_numbers/issues"